# wol-service

./: .env.in  .gitignore  .pre-commit-config.yaml  .pre-push-config.yaml  Dockerfile  Dockerfile.pypi  README.md  docker-compose.yml  pyproject.toml  requrements.txt
.github/workflows/: ci.yml  release.yml
scripts/: docker_build.sh  docker_build_local.sh  docker_build_pypi.sh  docker_compose_up.sh  run_tests.sh
src/wol_service/: __init__.py  api.py  app.py  auth.py  env.py  models.py  storage.py  ui.py  user_management.py  utils.py  validators.py  wol.py
src/wol_service/static/: styles.css
src/wol_service/templates/: index.html  login.html
tests/: conftest.py  test_api.py  test_app.py  test_auth.py  test_ui.py  test_user_management.py  test_validators.py  test_wol.py
tests/smoke_tests/: test_docker_compose.py
