[project]
name = "wol-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DvorkaM", email = "DvorkaM@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.4",
    "jinja2>=3.1.6",
    "uvicorn[standard]>=0.38.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.20",
    "starlette>=0.49.3",
    "argon2-cffi>=25.1.0",
    "python-jose>=3.5.0",
]

[project.scripts]
wol-service = "wol_service.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]
