[project]
name = "wol-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DvorkaM", email = "DvorkaM@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.120.4",
    "jinja2>=3.1.6",
    "uvicorn[standard]>=0.38.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.20",
    "starlette>=0.49.3",
    "argon2-cffi>=25.1.0",
    "python-jose>=3.5.0",
]

[project.scripts]
wol-service = "wol_service.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "ruff>=0.5.5",
    "types-passlib>=1.7.7.20250602",
    "types-python-jose>=3.5.0.20250531",
]
test = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
